[metadata]
name = my-python-packaging
description = A Python packaging example
long_description = file: README.md
url = https://github.com/grktsh/my-python-packaging
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:

[bdist_wheel]
universal = 1
